# scasim

./: .gitmodules  Cargo.toml  README.md
cocotb/: requirements.txt  run_tvla.py
src/: fst.rs  lib.rs  main.rs  optional_filter.rs  plot.rs  power_model.rs
