[package]
name = "scasim"
version = "0.1.0"
edition = "2024"

[dependencies]
bytesize = "2.0.1"
clap = { version = "4.5.42", features = ["derive", "env"] }
indicatif = "0.18.0"
itertools = "0.14.0"
wellen = "0.17.1"
fst-reader = {path = "fst-reader"}
# vcd = { git = "https://github.com/kevinmehall/rust-vcd.git" }
ndarray = { version = "0.16.1", features = ["approx", "rayon", "serde"] }
ndarray-npz = "0.4.2"
compact_str = "0.9.0"
bitvec = "1.0.1"
linereader = "0.4.0"
atoi_radix10 = "0.0.1"
plotly = { version = "0.13.5", features = [
    "static_export_default",
    "plotly_embed_js",
    "plotly_image",
    "plotly_ndarray",
] }
scalib = { path = "deps/SCALib/src/scalib_ext/scalib" }
zarrs = "0.21.2"
flate2 = "1.1.2"
serde_json = "1.0.142"
miette = { version = "7.6.0", features = ["fancy"] }
thiserror = "2.0.12"
num-format = "0.4.4"
log = "0.4.27"
env_logger = "0.11.8"
num-ordinal = "0.2.0"
rayon = "1.10.0"
capitalize = "0.3.4"
rustc-hash = "2.1.1"

[dev-dependencies]
approx = "0.5.1"
ndarray-rand = "0.15.0"
ndarray-stats = "0.6.0"

[lib]
bench = false

[[bin]]
name = "tvla"

[profile.dev]
opt-level = 1               # Use slightly better optimizations.
overflow-checks = false     # Disable integer overflow checks.
